unpackaged/main/default/objects/Opportunity/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <description>What kind of person is he? For now its anything the sales rep wants to put in…soon maybe we should have 4 options or so (nice guy, curious, angry, heavy accent foreigner.</description>
    <formula>Account.Character__c</formula>
    <inlineHelpText>What kind of person is he?</inlineHelpText>
    <label>Character</label>
    <type>Text</type>
</CustomField>