unpackaged/main/default/objects/Opportunity/fields/Chatter_Email__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Email__c</fullName>
    <description>Hidden Field. Ron uses it for integration.</description>
    <label>Chatter Email</label>
    <type>Email</type>
</CustomField>