unpackaged/main/default/objects/Opportunity/fields/Chosen_Funder_2__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Funder_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chosen Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Opportunities (Chosen Funder)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>