unpackaged/main/default/objects/Opportunity/fields/City_Opp__c.field-meta.xml
<CustomField>
    <fullName>City_Opp__c</fullName>
    <formula>Account.City_State_Zip_Code_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Opp</label>
    <type>Text</type>
</CustomField>