unpackaged/main/default/objects/Opportunity/fields/Client_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>Client_Bank_Statements__c</fullName>
    <description>This is where you type the exact missing info for this merchant when it comes to bank statements. If the bank statements are complete just type in the box: "Complete"</description>
    <inlineHelpText>This is where you type the exact missing info for this merchant when it comes to bank statements</inlineHelpText>
    <label>Client Bank Statements:</label>
    <type>TextArea</type>
</CustomField>