unpackaged/main/default/objects/Opportunity/fields/Client_Credit_Card_Processing_Statement__c.field-meta.xml
<CustomField>
    <fullName>Client_Credit_Card_Processing_Statement__c</fullName>
    <label>Client Credit Card Processing Statement</label>
    <type>TextArea</type>
</CustomField>