unpackaged/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Repayment Method</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Seeking traditional loan</fullName>
            </value>
            <value>
                <fullName>No Need</fullName>
            </value>
            <value>
                <fullName>Needs more Funds</fullName>
            </value>
            <value>
                <fullName>Can't get in contact</fullName>
            </value>
            <value>
                <fullName>Too Small Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>