unpackaged/main/default/objects/Opportunity/fields/Closer_Name__c.field-meta.xml
<CustomField>
    <fullName>Closer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Closer Name)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>