unpackaged/main/default/objects/Opportunity/fields/Closer_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Closer_Name_Text__c</fullName>
    <formula>Closer_Name__r.FirstName + " " + Closer_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closer Name</label>
    <type>Text</type>
</CustomField>