unpackaged/main/default/objects/Opportunity/fields/COJ_DBA_Block__c.field-meta.xml
<CustomField>
    <fullName>COJ_DBA_Block__c</fullName>
    <label>COJ DBA Block</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>