unpackaged/main/default/objects/Opportunity/fields/Conditional_Stips_Field_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Stips_Field_Email_Template__c</fullName>
    <formula>IF(Approval_Stips__c  &lt;&gt; NULL, BR() + "The following are the stipulations needed for funding: " &amp; BR() + Approval_Stips__c &amp; BR(), " ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditional Stips Field (Email Template)</label>
    <type>Text</type>
</CustomField>