unpackaged/main/default/objects/Opportunity/fields/Contact_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_2__c</fullName>
    <formula>Funder_2__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>