unpackaged/main/default/objects/Opportunity/fields/Contact_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_3__c</fullName>
    <formula>Funder_3__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>