unpackaged/main/default/objects/Opportunity/fields/Contact_Name_4__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_4__c</fullName>
    <formula>Funder_4__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>