unpackaged/main/default/objects/Opportunity/fields/Contact_Phone_4__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_4__c</fullName>
    <formula>Funder_4__r.Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>