unpackaged/main/default/objects/Opportunity/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <description>This field is mapped to the Converted Lead field on the Lead object, allowing us to know which Opp originate from Leads and should thereby trigger a workflow.</description>
    <label>Converted Lead</label>
    <length>3</length>
    <type>Text</type>
</CustomField>