unpackaged/main/default/objects/Opportunity/fields/Create_Reignited_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Reignited_Date__c</fullName>
    <formula>IF ( NOT(ISNULL( Date_Opportunity_Reignited__c )) &amp;&amp; Date_Opportunity_Reignited__c &gt; DATEVALUE( CreatedDate ) , Date_Opportunity_Reignited__c, DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create / Reignited Date</label>
    <type>Date</type>
</CustomField>