unpackaged/main/default/objects/Opportunity/fields/Created_CPR_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_CPR_Date__c</fullName>
    <formula>IF(
CreatedDate &gt;= ADDMONTHS( NOW() ,-12),
CreatedDate,
IF( Application_In_Date_Time__c  &gt;= ADDMONTHS( NOW() ,-12),
Application_In_Date_Time__c,
IF(  Ready_To_Submit_Date_Time__c   &gt;= ADDMONTHS( NOW() ,-12),
Ready_To_Submit_Date_Time__c,
CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created / CPR Date</label>
    <type>Date</type>
</CustomField>