unpackaged/main/default/objects/Opportunity/fields/Credit_Card_Processor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card Processor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Credit Card Processor)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>