unpackaged/main/default/objects/Opportunity/fields/Credit_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>Credit_Inquiries__c</fullName>
    <description>These are the most recent inquiries on the credit report</description>
    <inlineHelpText>These are the most recent inquiries on the credit report</inlineHelpText>
    <label>Credit Inquiries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>