unpackaged/main/default/objects/Opportunity/fields/Credit_Score_1__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_1__c</fullName>
    <formula>Account.Partner_1_Credit_Score__c</formula>
    <label>Credit Score (1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>