unpackaged/main/default/objects/Opportunity/fields/Credit_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_2__c</fullName>
    <formula>Account.Partner_2_Credit_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Score (2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>