unpackaged/main/default/objects/Opportunity/fields/Current_Cash_Advance_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Cash_Advance_Company__c</fullName>
    <label>Current Cash Advance Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>