unpackaged/main/default/objects/Opportunity/fields/Custom_Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dropbox_Path__c</fullName>
    <formula>'Accounts/' + Account.Name + '/' +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dropbox Path</label>
    <type>Text</type>
</CustomField>