unpackaged/main/default/objects/Opportunity/fields/Daily_Holdback_1__c.field-meta.xml
<CustomField>
    <fullName>Daily_Holdback_1__c</fullName>
    <label>Daily Holdback</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>