unpackaged/main/default/objects/Opportunity/fields/Daily_Holdback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Daily_Holdback_Amount__c</fullName>
    <label>Daily Holdback % [MCA]</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>