unpackaged/main/default/objects/Opportunity/fields/Daily_Payment3__c.field-meta.xml
<CustomField>
    <fullName>Daily_Payment3__c</fullName>
    <formula>Payback_Amount__c / Number_of_Payments__c</formula>
    <label>Daily Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>