unpackaged/main/default/objects/Opportunity/fields/Daily_Payment_1__c.field-meta.xml
<CustomField>
    <fullName>Daily_Payment_1__c</fullName>
    <label>Daily Payment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>