unpackaged/main/default/objects/Opportunity/fields/Daily_Payment__c.field-meta.xml
<CustomField>
    <fullName>Daily_Payment__c</fullName>
    <label>Daily Payment</label>
    <summarizedField>Loan_Balance__c.Daily_Payment__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Balance__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Balance__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>