unpackaged/main/default/objects/Opportunity/fields/Data_Cleansing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Cleansing_Notes__c</fullName>
    <label>Data Cleansing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>