unpackaged/main/default/objects/Opportunity/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>