unpackaged/main/default/objects/Opportunity/fields/Date_3__c.field-meta.xml
<CustomField>
    <fullName>Date_3__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>