unpackaged/main/default/objects/Opportunity/fields/Date_Changed_to_3rd_Owner__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed_to_3rd_Owner__c</fullName>
    <label>Date Changed to 3rd Owner</label>
    <type>Date</type>
</CustomField>