unpackaged/main/default/objects/Opportunity/fields/Date_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Converted__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Lead Converted</label>
    <type>Date</type>
</CustomField>