unpackaged/main/default/objects/Opportunity/fields/Date_Lead_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Received__c</fullName>
    <description>Usually means the date the merchant applied for funding so the date we received his inquiry. For web leads, this field should be auto populated by the created date.</description>
    <formula>Account.Date_Lead_Received__c</formula>
    <inlineHelpText>Date Applied.</inlineHelpText>
    <label>Date Lead Received</label>
    <type>DateTime</type>
</CustomField>