unpackaged/main/default/objects/Opportunity/fields/Date_Opportunity_Reignited__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Reignited__c</fullName>
    <label>Date Opportunity Reignited</label>
    <type>Date</type>
</CustomField>