unpackaged/main/default/objects/Opportunity/fields/Date_Signed_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_2__c</fullName>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>