unpackaged/main/default/objects/Opportunity/fields/DateTime_Changed_to_1st_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Changed_to_1st_Sales_Rep__c</fullName>
    <label>DateTime Changed to 1st Sales Rep</label>
    <type>DateTime</type>
</CustomField>