unpackaged/main/default/objects/Opportunity/fields/Days_in_the_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Days_in_the_pipeline__c</fullName>
    <formula>CASE( StageName , "Closed Lost",  CloseDate  - Create_Reignited_Date__c , "Closed Won", CloseDate  - Create_Reignited_Date__c , "Declined", CloseDate  - Create_Reignited_Date__c  , "Funded",  Funded_On__c  - Create_Reignited_Date__c  , "Farmed Out", CloseDate  - Create_Reignited_Date__c , "Out of Business", CloseDate  - Create_Reignited_Date__c , TODAY() - Create_Reignited_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in the pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>