unpackaged/main/default/objects/Opportunity/fields/Days_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Days_of_the_Week__c</fullName>
    <label>Days of the Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Once a Week on Monday</fullName>
            </value>
            <value>
                <fullName>Once a Week on Tuesday</fullName>
            </value>
            <value>
                <fullName>Once a Week on Wednesday</fullName>
            </value>
            <value>
                <fullName>Once a Week on Thursday</fullName>
            </value>
            <value>
                <fullName>Once a Week on Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>