unpackaged/main/default/objects/Opportunity/fields/Deal_Priority__c.field-meta.xml
<CustomField>
    <fullName>Deal_Priority__c</fullName>
    <label>Deal Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>