unpackaged/main/default/objects/Opportunity/fields/Dear_Comma__c.field-meta.xml
<CustomField>
    <fullName>Dear_Comma__c</fullName>
    <formula>"Dear " +  Account.Full_Name_1__c + ","</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dear Comma</label>
    <type>Text</type>
</CustomField>