unpackaged/main/default/objects/Opportunity/fields/Decline_Ration__c.field-meta.xml
<CustomField>
    <fullName>Decline_Ration__c</fullName>
    <formula>IF(X1st_Sales_Rep__r.Id == Owner.Id &amp;&amp; ISPICKVAL(StageName , "Declined"), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decline Ration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>