unpackaged/main/default/objects/Opportunity/fields/Deposits_from_Lenders__c.field-meta.xml
<CustomField>
    <fullName>Deposits_from_Lenders__c</fullName>
    <description>Note here any deposits from funding companies</description>
    <label>Deposits from Lenders</label>
    <type>TextArea</type>
</CustomField>