unpackaged/main/default/objects/Opportunity/fields/Desired_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Desired_Amount1__c</fullName>
    <label>Desired Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>