unpackaged/main/default/objects/Opportunity/fields/Desired_Amount_Web__c.field-meta.xml
<CustomField>
    <fullName>Desired_Amount_Web__c</fullName>
    <label>Desired Amount (Web)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$10k to $50k</fullName>
            </value>
            <value>
                <fullName>$50k to $150k</fullName>
            </value>
            <value>
                <fullName>$150k to $300k</fullName>
            </value>
            <value>
                <fullName>$300k to $600k</fullName>
            </value>
            <value>
                <fullName>$600k to $1mm</fullName>
            </value>
            <value>
                <fullName>$1mm to $10mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>