unpackaged/main/default/objects/Opportunity/fields/Dollar_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Amount_2__c</fullName>
    <label>Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>