unpackaged/main/default/objects/Opportunity/fields/Don_t_Sent_Automated_Emails__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Sent_Automated_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking the box will not trigger the automated emails sent upon various stage changes</description>
    <label>Don't Sent Automated Emails</label>
    <type>Checkbox</type>
</CustomField>