unpackaged/main/default/objects/Opportunity/fields/Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drivers License</label>
    <type>Checkbox</type>
</CustomField>