unpackaged/main/default/objects/Opportunity/fields/Edit_In_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Edit_In_Application_Form__c</fullName>
    <formula>IF( !ISBLANK(Converted_Lead_Record__c ) ,
"https://emcfinancial.com/apply-now.php?lid=" +  Converted_Lead_Record__c ,
'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit In Application Form</label>
    <type>Text</type>
</CustomField>