unpackaged/main/default/objects/Opportunity/fields/Effective_Renewal_JG__c.field-meta.xml
<CustomField>
    <fullName>Effective_Renewal_JG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For JG</description>
    <inlineHelpText>For JG</inlineHelpText>
    <label>Effective Renewal (JG)</label>
    <type>Checkbox</type>
</CustomField>