unpackaged/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This is the Account Email, updated via a workflow to populate this field in order to enable a Email Alert to the Account Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>