unpackaged/main/default/objects/Opportunity/fields/Email_Opp__c.field-meta.xml
<CustomField>
    <fullName>Email_Opp__c</fullName>
    <formula>Account.Email__c</formula>
    <label>Email Opp</label>
    <type>Text</type>
</CustomField>