unpackaged/main/default/objects/Opportunity/fields/Emergency_loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Emergency_loan_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency loan Application</label>
    <type>Checkbox</type>
</CustomField>