unpackaged/main/default/objects/Opportunity/fields/Equipment_Loaner_Form__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Loaner_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Loaner Form</label>
    <type>Checkbox</type>
</CustomField>