unpackaged/main/default/objects/Opportunity/fields/Equipment_Situation__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Situation__c</fullName>
    <label>Equipment Situation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reprogram</fullName>
            </value>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>