unpackaged/main/default/objects/Opportunity/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>