unpackaged/main/default/objects/Opportunity/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>External Id</label>
    <type>AutoNumber</type>
</CustomField>