unpackaged/main/default/objects/Opportunity/fields/Factor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factor_Rate__c</fullName>
    <label>Factor Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>