unpackaged/main/default/objects/Opportunity/fields/Fee_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Fee_Agreement__c</fullName>
    <label>Fee Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>