unpackaged/main/default/objects/Opportunity/fields/Final_Stips__c.field-meta.xml
<CustomField>
    <fullName>Final_Stips__c</fullName>
    <description>Final stipulations text box to populate missing items email</description>
    <label>Final Stips</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>