unpackaged/main/default/objects/Opportunity/fields/First__c.field-meta.xml
<CustomField>
    <fullName>First__c</fullName>
    <formula>Account.Full_Name_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First</label>
    <type>Text</type>
</CustomField>