unpackaged/main/default/objects/Opportunity/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <inlineHelpText>Enter a time to receive an email reminder to follow up with the merchant when the time comes. Note: The email will be sent to the Opportunity Owner. Allow up to 30 minutes from the follow up time for the email to be sent.</inlineHelpText>
    <label>Follow Up</label>
    <type>DateTime</type>
</CustomField>