unpackaged/main/default/objects/Opportunity/fields/Form_Step_4_Application_Sent__c.field-meta.xml
<CustomField>
    <fullName>Form_Step_4_Application_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Form step 4 finished. Application sent.</description>
    <label>Form Step 4 - Application Sent</label>
    <type>Checkbox</type>
</CustomField>