unpackaged/main/default/objects/Opportunity/fields/Funded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date_Time__c</fullName>
    <label>Funded Date/Time</label>
    <type>DateTime</type>
</CustomField>