unpackaged/main/default/objects/Opportunity/fields/Funded_On__c.field-meta.xml
<CustomField>
    <fullName>Funded_On__c</fullName>
    <label>Funded On</label>
    <type>Date</type>
</CustomField>