unpackaged/main/default/objects/Opportunity/fields/Funder_1__c.field-meta.xml
<CustomField>
    <fullName>Funder_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>