unpackaged/main/default/objects/Opportunity/fields/Funder_2__c.field-meta.xml
<CustomField>
    <fullName>Funder_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Opportunities (Funder 2)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>