unpackaged/main/default/objects/Opportunity/fields/Funder_3__c.field-meta.xml
<CustomField>
    <fullName>Funder_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Opportunities (Funder 3)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>