unpackaged/main/default/objects/Opportunity/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <label>Funder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>