unpackaged/main/default/objects/Opportunity/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>Describes the type of product we sold the client</description>
    <inlineHelpText>Loan, Line of Credit etc.</inlineHelpText>
    <label>Funding Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Line of Credit</fullName>
            </value>
            <value>
                <fullName>Long Term Funding Loan</fullName>
            </value>
            <value>
                <fullName>Short Term Funding Loan</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate Loan</fullName>
            </value>
            <value>
                <fullName>Equipment Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>